SettingFragment 확인 버튼 작동 및 slider 변환 확인 그래프 개수 추가 MainFragment 임계치 데이터 받아오기 성공

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -41,11 +41,12 @@
                         android:id="@+id/Max1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="28dp"
                         android:text="최대 임계치"
-                        android:textStyle="bold"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                        android:textStyle="bold"
                         app:layout_constraintEnd_toStartOf="@+id/progress_bar1"
+                        app:layout_constraintHorizontal_bias="0.511"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -94,7 +95,6 @@
                         android:layout_height="wrap_content"
                         android:textSize="50dp"
                         android:maxLength="5"
-                        android:text="50.12"
                         android:textStyle="bold"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         app:layout_constraintBottom_toBottomOf="@+id/progress_bar1"
@@ -146,11 +146,12 @@
                         android:id="@+id/Max2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="36dp"
                         android:text="최대 임계치"
-                        android:textStyle="bold"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                        android:textStyle="bold"
                         app:layout_constraintEnd_toStartOf="@+id/progress_bar2"
+                        app:layout_constraintHorizontal_bias="0.511"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -198,7 +199,6 @@
                         android:layout_height="wrap_content"
                         android:textSize="50dp"
                         android:maxLength="5"
-                        android:text="50.12"
                         android:textStyle="bold"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         app:layout_constraintBottom_toBottomOf="@+id/progress_bar2"
@@ -302,7 +302,6 @@
                         android:layout_height="wrap_content"
                         android:textSize="50dp"
                         android:maxLength="5"
-                        android:text="50.12"
                         android:textStyle="bold"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         app:layout_constraintBottom_toBottomOf="@+id/progress_bar3"
@@ -406,7 +405,6 @@
                         android:layout_height="wrap_content"
                         android:textSize="50dp"
                         android:maxLength="5"
-                        android:text="50.12"
                         android:textStyle="bold"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         app:layout_constraintBottom_toBottomOf="@+id/progress_bar4"
@@ -510,7 +508,6 @@
                         android:layout_height="wrap_content"
                         android:textSize="50dp"
                         android:maxLength="5"
-                        android:text="50.12"
                         android:textStyle="bold"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         app:layout_constraintBottom_toBottomOf="@+id/progress_bar5"
@@ -615,7 +612,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:maxLength="5"
-                        android:text="50.12"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         android:textSize="50dp"
                         android:textStyle="bold"
