--- a/app/src/main/res/drawable-v24/circle.xml
+++ b/app/src/main/res/drawable-v24/circle.xml
@@ -4,6 +4,7 @@
         <shape
             android:shape="ring"
             android:thicknessRatio="6"
+            android:elevation="50dp"
             android:useLevel="false">
             <solid android:color="@color/primary_light" />
         </shape>
