모니터링 화면 완성 소켓 통신 완료

--- a/app/src/main/res/drawable-v24/circle2.xml
+++ b/app/src/main/res/drawable-v24/circle2.xml
@@ -6,7 +6,7 @@
             android:thicknessRatio="6"
             android:elevation="50dp"
             android:useLevel="false">
-            <solid android:color="#fa5252" />
+            <solid android:color="#52bafa" />
         </shape>
     </item>
     <item>
