--- a/app/src/main/res/drawable-v24/circle4.xml
+++ b/app/src/main/res/drawable-v24/circle4.xml
@@ -6,7 +6,7 @@
             android:thicknessRatio="6"
             android:elevation="50dp"
             android:useLevel="false">
-            <solid android:color="#fa5252" />
+            <solid android:color="#3c8f70" />
         </shape>
     </item>
     <item>
