디바이스 토큰완료 차트 갱신 완료 홈 버튼 이탈 다른 프레그먼트 이동 시 작동

--- a/app/src/main/res/layout/fragment_graph_framgment.xml
+++ b/app/src/main/res/layout/fragment_graph_framgment.xml
@@ -18,7 +18,9 @@
                 android:id="@+id/LineChart"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -27,7 +29,7 @@
                 android:id="@+id/LineChart2"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/LineChart" />
@@ -36,6 +38,9 @@
                 android:id="@+id/LineChart3"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/LineChart2" />
@@ -44,6 +49,9 @@
                 android:id="@+id/LineChart4"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/LineChart3" />
@@ -52,6 +60,9 @@
                 android:id="@+id/LineChart5"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/LineChart4" />
@@ -60,6 +71,9 @@
                 android:id="@+id/LineChart6"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginBottom="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
