최종 완성본 메인 화면 수정 완료 양식장 이름 및 로고 삽입

--- a/app/src/main/res/drawable/firstcircle.xml
+++ b/app/src/main/res/drawable/firstcircle.xml
@@ -19,7 +19,8 @@
                 android:useLevel="true">
                 <gradient
                     android:type="sweep"
-                    android:centerColor="@color/primary"
+                    android:startColor="@color/primary"
+                    android:centerColor="@color/lime"
                     android:endColor="@color/red"/>
             </shape>
         </rotate>
