--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -130,6 +130,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="15dp"
                         android:maxLength="5"
+                        android:text="25.25"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         android:textSize="40dp"
                         android:textStyle="bold"
@@ -283,6 +284,7 @@
                         android:textSize="40dp"
                         android:layout_marginEnd="15dp"
                         android:maxLength="5"
+                        android:text="25.25"
                         android:textStyle="bold"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         app:layout_constraintBottom_toBottomOf="@+id/progress_bar2"
@@ -414,6 +416,7 @@
                         android:id="@+id/text_view_progress3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="25.25"
                         android:textSize="40dp"
                         android:layout_marginEnd="15dp"
                         android:maxLength="5"
@@ -547,6 +550,7 @@
                         android:id="@+id/text_view_progress4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="25.25"
                         android:textSize="40dp"
                         android:layout_marginEnd="17dp"
                         android:maxLength="5"
@@ -681,6 +685,7 @@
                         android:id="@+id/text_view_progress5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="255.25"
                         android:textSize="40dp"
                         android:layout_marginEnd="20dp"
                         android:maxLength="5"
@@ -816,6 +821,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="25dp"
+                        android:text="25.25"
                         android:maxLength="5"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         android:textSize="40dp"
