--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,7 +18,6 @@
     <style name="defaultButton" parent="Widget.AppCompat.Button.Colored">
         <item name="android:colorAccent">@color/colorAccent</item>
     </style>
-
     <style name="urgentButton" parent="Widget.AppCompat.Button.Colored">
         <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
     </style>
@@ -26,7 +25,9 @@
     <item name="windowActionBar">false</item>
     <item name="windowNoTitle">true</item>
     </style>
-
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/background_splash</item>
+    </style>
     <style name="Theme.TransparentStatusBar" parent="Theme.MaterialComponents.DayNight.NoActionBar"/>
 
 
